fix(Layout): Prevent page content overflowing

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -85,6 +85,7 @@
 .Content {
   background-color: var(--canvas-secondary-deep);
   flex: 1;
+  overflow: hidden;
 }
 
 @include apply-to(Tablet, Laptop, Desktop) {
